@@ -1,3 +1,9 @@
+2001-09-11  Havoc Pennington  <hp@pobox.com>
+
+	* src/window.c: fix up handling of text properties, so we 
+	get UTF8_STRING as that type and not as text list, and so 
+	we properly convert from text list to UTF-8
+
 2001-09-10  Havoc Pennington  <hp@pobox.com>
 
 	* src/menu.c (meta_window_menu_new): icon for unmaximize
